[project]
name = "latitude"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Whitfield"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "plotnine (>=0.15.1,<0.16.0)",
    "s3fs (>=2025.12.0,<2026.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "quarto (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
